<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@drawable/detail_background"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </androidx.viewpager.widget.ViewPager>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/arrow_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_indicator_detail"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"

                android:backgroundTint="@color/transparent"
                app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabBackground="@drawable/indicator_selector"
                app:tabIndicatorHeight="0dp" />


            <LinearLayout
                android:id="@+id/bottom_sheet_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/detail_bottom_sheet_background"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jasper_national_park"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/lorem_ipsum" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="11dp"
                        android:background="@drawable/info_count_background"
                        android:padding="10dp"
                        android:text="@string/hotel"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/info_count_background"
                        android:padding="10dp"
                        android:text="@string/restaurants_count"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginVertical="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/vector"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:padding="10dp"
                    android:background="@drawable/btn_background"
                    android:text="@string/btn_text"
                    android:textAllCaps="false" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>




    </FrameLayout>

</FrameLayout>