<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_image"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:background="@drawable/bottom_sheet_background">

        <TextView
            android:layout_marginVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:gravity="center">

           <androidx.viewpager.widget.ViewPager
               android:id="@+id/view_pager"
               android:layout_width="match_parent"
               android:layout_height="?actionBarSize"/>

           <com.google.android.material.tabs.TabLayout
               android:backgroundTint="@color/transparent"
               android:id="@+id/tab_indicator"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:tabBackground="@drawable/indicator_selector"
               app:tabIndicatorHeight="0dp"/>
       </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="12dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:backgroundTint="@color/sign_in_button_color"/>

            <Button
                android:id="@+id/btn_log_in"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="12dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:backgroundTint="@color/white" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>